# tcp_tap

./: .cexclude  .cpatterns  .envx  .gitignore  .gitmodules  .indent.pro  .vim.custom  AUTHORS  Android.mk  CMakeLists.txt  Makefile  README  README.md  c-tags  clientserver.c  common.mk  endpoint_transfers.c  env.c  gdb.tap.sh  local.h  main.c  main.cpp  server.c  server.h  sig_mngr.c  sig_mngr.h  switchboard.c  switchboard.h  tags  tcp-tap_config.h  tcp-tap_config.h.in  tcp_tap.h  tcp_tap.kdev4
.kdev4/: tcp_tap.kdev4
doc/: README.md
examples/: .gitignore  Android.mk  CMakeLists.txt  client.c  config.h  config.h.in  echo_multi.c  echo_simple.c  local_domain.c  local_domain_read.c  local_domain_write.c  myrsh.c  server_threaded_multisession.c  switchboard_simple.c  switchboard_threaded.c
include/: server.h
include/tcp-tap/: clientserver.h  server.h  switchboard.h
